--- a/style.css
+++ b/style.css
@@ -477,15 +477,13 @@ section {
     transform: translateX(0);
 }
 
-.about-image img {
-    width: 100%;
-    height: auto;
+.about-image iframe {
     display: block;
     transition: var(--transition-slow);
 }
 
-.about-image:hover img {
-    transform: scale(1.05);
+.about-image:hover iframe {
+    transform: scale(1.2);
 }
 
 .map iframe {
