--- a/assets/subpages/manutencao/style.css
+++ b/assets/subpages/manutencao/style.css
@@ -39,7 +39,7 @@ body {
 
 /* Header com efeito de vidro */
 header {
-    background: rgba(255, 255, 255, 0.5);
+    background: rgba(255, 255, 255, 0.1);
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
     box-shadow: 0 2px 20px rgba(0, 0, 0, 0.1);
@@ -115,7 +115,8 @@ header.scrolled {
 /* Hero Section para página de serviço */
 .service-hero {
     background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('https://res.cloudinary.com/dpybwlkmu/image/upload/v1762853896/WhatsApp_Image_2025-10-28_at_13.16.50_rlh6ct.jpg') no-repeat center center/cover;
-    height: 80vh;
+    height: 60vh;
+    margin-top: 80vh;
     display: flex;
     align-items: center;
     color: var(--white);
@@ -654,4 +655,5 @@ footer::before {
     }
 
 }
+
 
