--- a/assets/subpages/engenharia/style.css
+++ b/assets/subpages/engenharia/style.css
@@ -104,6 +104,37 @@ header.scrolled {
     width: 100%;
 }
 
+/* Dropdown oculto por padrão */
+.dropdown-menu {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    background: white;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+    margin: 2px 5px;
+    padding: 10px 0;
+    min-width: 250px;
+    list-style: none;
+}
+
+/* Mostrar dropdown no hover */
+.nav-item:hover .dropdown-menu {
+    display: block;
+    transition: opacity 5s ease, transform 5s ease;
+}
+
+.dropdown-menu a {
+    padding: 8px 15px;
+    display: block;
+    color: #333;
+    text-decoration: none;
+}
+
+.dropdown-arrow {
+    color: var(--dark-gray);
+}
+
 .mobile-menu-btn {
     display: none;
     font-size: 1.5rem;
@@ -676,6 +707,10 @@ footer::before {
         text-align: center;
     }
     
+     .dropdown-arrow {
+        display: none;
+    }
+
     .mobile-menu-btn {
         display: block;
     }
