--- a/assets/subpages/engenharia/style.css
+++ b/assets/subpages/engenharia/style.css
@@ -337,6 +337,7 @@ section {
     display: flex;
     flex-direction: column;
     text-decoration: none;
+    /* align-items: center; */
     background: var(--white);
     border-radius: 15px;
     overflow: hidden;
@@ -358,7 +359,7 @@ section {
 }
 
 .project-image img {
-    width: 300px;
+    width: 100%;
     height: 100%;
     object-fit: cover;
     transition: var(--transition-slow);
@@ -1067,6 +1068,15 @@ footer::before {
 
 
 /* Responsividade */
+@media (max-width: 1200px) {
+    .project-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: var(--transition-slow);
+}
+}
+
 @media (max-width: 768px) {
     .nav-menu {
         position: fixed;
