--- a/assets/subpages/engenharia/style.css
+++ b/assets/subpages/engenharia/style.css
@@ -412,7 +412,15 @@ section {
     font-size: 1.3rem;
     font-weight: 600;
     color: var(--black);
-    margin-bottom: 10px;
+    margin-bottom: 5px;
+    line-height: 1.3;
+}
+
+.title {
+    font-size: 1.1rem;
+    font-weight: 600;
+    color: var(--black);
+    margin-bottom: 5px;
     line-height: 1.3;
 }
 
